@@ -290,7 +290,29 @@ function hook_field_group_format_summary($group) {
 }
 
 /**
- * Implements hook_field_group_delete_field_group().
+ * Implement hook_ctools_plugin_api().
+ * This hook is needed to let ctools know about exportables.
+ * If you create field groups by using hook_field_group_info, you
+ * will need to include the ctools api hook as well.
+ */
+function hook_ctools_plugin_api($module, $api) {
+  if ($module == 'field_group' && $api == 'field_group') {
+    return array('version' => 1);
+  }
+}
+
+/**
+ * Implements hook_field_group_info().
+ * Don't forget to include the ctools hook to notify that
+ * your modules has field group exports.
+ * @see hook_ctools_plugin_api.
+ */
+function hook_field_group_info() {
+
+}
+
+/**
+ * Implements hook_field_group_update_field_group().
  *
  * This hook is invoked by ctools export API.
  * Note that this is used by ctools and the group could occasional be
@@ -311,8 +333,8 @@ function hook_field_group_update_field_group($group) {
  * @param $object $group
  *   The FieldGroup object.
  */
-function hook_field_group_update_field_group($group) {
-  // Update extra data depending on the group.
+function hook_field_group_delete_field_group($group) {
+  // Delete extra data depending on the group.
 }
 
 /**
