@@ -10,9 +10,9 @@ files[] = field_group.field_ui.inc
 files[] = field_group.form.inc
 files[] = field_group.features.inc
 files[] = field_group.test
-; Information added by drupal.org packaging script on 2011-03-16
-version = "7.x-1.0-rc2"
+; Information added by drupal.org packaging script on 2011-05-24
+version = "7.x-1.0"
 core = "7.x"
 project = "field_group"
-datestamp = "1300283167"
+datestamp = "1306266416"
 
