@@ -6,6 +6,12 @@
  */
 Drupal.FieldGroup = Drupal.FieldGroup || {};
 Drupal.FieldGroup.Effects = Drupal.FieldGroup.Effects || {};
+Drupal.FieldGroup.groupWithfocus = null;
+
+Drupal.FieldGroup.setGroupWithfocus = function(element) {
+  element.css({display: 'block'});
+  Drupal.FieldGroup.groupWithfocus = element;
+}
 
 /**
  * Implements Drupal.FieldGroup.processHook().
@@ -18,6 +24,10 @@ Drupal.FieldGroup.Effects.processFieldset = {
         if ($(this).is('.required-fields') && $(this).find('.form-required').length > 0) {
           $('legend span.fieldset-legend', $(this)).eq(0).append('&nbsp;').append($('.form-required').eq(0).clone());
         }
+        if ($('.error', $(this)).length) {
+          $('legend span.fieldset-legend', $(this)).eq(0).addClass('error');
+          Drupal.FieldGroup.setGroupWithfocus($(this));
+        }
       });
     }
   }
@@ -28,15 +38,21 @@ Drupal.FieldGroup.Effects.processFieldset = {
  */
 Drupal.FieldGroup.Effects.processAccordion = {
   execute: function (context, settings, type) {
-    $('div.field-group-accordion-wrapper', context).accordion({
+    var accordions = $('div.field-group-accordion-wrapper', context).accordion({
       autoHeight: false,
-      active: '.field-group-accordion-active'
+      active: 0,
+      collapsible: true
     });
     if (type == 'form') {
       // Add required fields mark to any element containing required fields
       $('div.accordion-item').each(function(i){
         if ($(this).is('.required-fields') && $(this).find('.form-required').length > 0) {
           $('h3.ui-accordion-header').eq(i).append('&nbsp;').append($('.form-required').eq(0).clone());
+        }
+        if ($('.error', $(this)).length) {
+          $('h3.ui-accordion-header').eq(i).addClass('error');
+          var activeOne = $(this).parent().accordion("activate" , i);
+          $('.ui-accordion-content-active', activeOne).css({height: 'auto', width: 'auto', display: 'block'});
         }
       });
     }
@@ -54,6 +70,11 @@ Drupal.FieldGroup.Effects.processHtabs = {
         if ($(this).is('.required-fields') && $(this).find('.form-required').length > 0) {
           $(this).data('horizontalTab').link.find('strong:first').after($('.form-required').eq(0).clone()).after('&nbsp;');
         }
+        if ($('.error', $(this)).length) {
+          $(this).data('horizontalTab').link.parent().addClass('error');
+          Drupal.FieldGroup.setGroupWithfocus($(this));
+          $(this).data('horizontalTab').focus();
+        }
       });
     }
   }
@@ -69,6 +90,11 @@ Drupal.FieldGroup.Effects.processTabs = {
       $('fieldset.vertical-tabs-pane').each(function(i){
         if ($(this).is('.required-fields') && $(this).find('.form-required').length > 0) {
           $(this).data('verticalTab').link.find('strong:first').after($('.form-required').eq(0).clone()).after('&nbsp;');
+        }
+        if ($('.error', $(this)).length) {
+          $(this).data('verticalTab').link.parent().addClass('error');
+          Drupal.FieldGroup.setGroupWithfocus($(this));
+          $(this).data('verticalTab').focus();
         }
       });
     }
